# YALC

./: .gitignore  .gitmodules  CMakeLists.txt  YALC.ino  blink_all_leds.cpp  blink_all_leds.hpp  brethe_colors.cpp  brethe_colors.hpp  brethe_leds.cpp  brethe_leds.hpp  config_manager.cpp  config_manager.hpp  effect_information.hpp  effect_manager.cpp  effect_manager.hpp  effect_parameter.hpp  filling_leds.cpp  filling_leds.hpp  off_leds.cpp  off_leds.hpp  random_leds.cpp  recv_all.py  remote_control.cpp  remote_control.hpp  rgb.cpp  rgb.hpp  sloping_leds.cpp  sloping_leds.hpp  web_interface.cpp  web_interface.hpp
discover/: Discover.cpp  Discover.hpp
docker/: Build-Dockerfile
esp32/: YALC.ino  blink_all_leds.cpp  blink_all_leds.hpp  build_copy_flash.sh  config.hpp  effect_information.hpp  effect_manager.cpp  effect_manager.hpp  filling_leds.cpp  random_leds.hpp  remote_control.cpp  remote_control.hpp  rgb.hpp  socket.cpp  socket.hpp  view.hpp  web_interface.cpp
protocol/: CMakeLists.txt  Common.hpp  DisplayController.cpp  DisplayController.hpp  DisplayNodeController.hpp
protocol/messages/: Discover.hpp  Header.hpp  MessageId.hpp  Ping.hpp  SetColors8Bit.hpp
python/: ChangeColors.py  YALCDaemon.py  sound2leds.py
pythonAnimations/: AnimationEngine.cpp  AnimationEngine.hpp  CMakeLists.txt  ChangeColors3.py  ChangeColors_2.py  MyAnimation.py  MyAnimation.py.hpp  Parameter.hpp  Pixels3Static.py  YALCAnimation.py  convertToHpp.py  main.cpp  pocketpy.h:Zone.Identifier  pocketpy1.hpp  update_pypocket.sh
pythonAnimations/animations/: Chasing.py  Crazy.py  FallingStar.py  FallingStarColor.py  Gold1.py  Gold2.py  MyAnimation.py  Random.py  Rotate4ColorsSlow.py  SolidColor.py  Tricolor.py  Wave.py  Wave2.py  Yellow.py
pythonAnimations/py_implementation/embed_micropython/: CMakeLists.txt  Makefile  build.sh  embed  embed.mk  main.  main.c  modmyport.c  mpconfigport.h
pythonAnimations/py_implementation/embed_micropython/modules/example/: example.c
pythonAnimations/py_implementation/embed_micropython/modules/leds/: leds.c  micropython.mk
system/linux/: CMakeLists.txt  SFMLDisplay.cpp  SFMLDisplay.hpp  Socket.cpp  Socket.hpp  Time.cpp  Time.hpp  main.cpp  pythonAnimationMain.cpp
system/raspberry_pico/: Time.cpp
system/raspberry_pico_w/: Application.hpp  CMakeLists.txt  EffectsManager.cpp  EffectsManager.hpp  InternetManager.cpp  InternetManager.hpp  LedsConfiguration.cpp  LedsConfiguration.hpp  Socket.cpp  Socket.hpp  Storage.cpp  Storage.hpp  Time.cpp  Time.hpp  UDPSocket.cpp  UDPSocket.hpp  WebServer.cpp  WebServer.hpp  lwipopts.h  main.cpp
system/raspberry_pico_w/static/: footer.html.hpp  header.html  header.html.hpp  index.html
system/raspberry_pico_w/webpages/: ConnectionSettings.cpp  ConnectionSettings.hpp  EffectsPage.cpp  EffectsPage.hpp  IndexPage.cpp  IndexPage.hpp  LedsConfigurationPage.cpp  LedsConfigurationPage.hpp  RebootPage.cpp  RebootPage.hpp
system/raspberry_pico_w/ws2812/: LedStringCombined.hpp  LedString_ws2812.cpp  LedString_ws2812.hpp  ws2812.cpp  ws2812.hpp  ws2812.pio
system/windows/: CMakeLists.txt  Socket.cpp  Socket.hpp  Time.cpp  main.cpp
